[tool.poetry]
name = "demo"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
hyperopt = "^0.2.7"
matplotlib = "^3.5.2"
pydantic = "^1.9.0"
ray = {extras = ["tune"], version = "^1.12.0"}
toml = "^0.10.2"
torch = "^1.11.0"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
